globus-xio (4.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix test case

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 22:00:49 -0500

globus-xio (4.0-1+gt6.@distro@) @distro@; urgency=low

  * Remove GPT

 -- Globus Toolkit <support@globus.org>  Fri, 13 Dec 2013 13:41:08 -0600

globus-xio (3.8-1) unstable; urgency=low

  * Fix hang on large GETs

 -- Globus Toolkit <support@globus.org>  Fri, 13 Dec 2013 13:41:08 -0600

globus-xio (3.7-1) unstable; urgency=low

  * Fixes related to HTTP client support in GridFTP

 -- Globus Toolkit <support@globus.org>  Thu, 12 Dec 2013 17:27:12 -0600

globus-xio (3.6-1) unstable; urgency=low

  * GT-445: Doxygen fixes

 -- Globus Toolkit <support@globus.org>  Thu, 10 Oct 2013 13:27:45 -0400

globus-xio (3.5-1) unstable; urgency=low

  * Fix wrapblock drivers losing attrs

 -- Globus Toolkit <support@globus.org>  Sat, 01 Jun 2013 05:52:20 -0500

globus-xio (3.4-1) unstable; urgency=low

  * GT-354: Compatibility with automake 1.13

 -- Globus Toolkit <support@globus.org>  Mon, 18 Mar 2013 09:59:09 -0400

globus-xio (3.3-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-xio (3.3-1) unstable; urgency=low

  * RIC-240: fix memory leak when GLOBUS_XIO_ATTR_SET_CREDENTIAL is used
  * RIC-241: check return value of close()

 -- Globus Toolkit <support@globus.org>  Thu, 15 Mar 2012 16:50:42 -0400
globus-xio (3.2-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-xio (3.2-1) unstable; urgency=low

  * sync prior to 5.2.0 branch

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 14:49:50 -0500

globus-xio (3.1-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-xio (3.1-0) unstable; urgency=low

  * Update to 5.1.3
