@@ -10,7 +10,7 @@ noinst_HEADERS = \
 	globus_xio_null.h \
         globus_i_xio_test_drivers.h
 
-noinst_LTLIBRARIES = libglobus_xio_test_drivers.la
+check_LTLIBRARIES = libglobus_xio_test_drivers.la
 
 AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) -I$(srcdir) $(PACKAGE_DEP_CFLAGS) -DGLOBUS_BUILTIN=1
 
@@ -26,4 +26,7 @@ libglobus_xio_test_drivers_la_SOURCES = \
 	globus_xio_null.c \
 	globus_xio_stack_driver.c
 libglobus_xio_test_drivers_la_LDFLAGS = \
-	$(PACKAGE_DEP_LIBS) -no-undefined -module -rpath ${libdir} ../../libglobus_xio.la
+	$(PACKAGE_DEP_LIBS) \
+	-no-undefined -module \
+	-rpath $(libdir) \
+	$(top_builddir)/libglobus_xio.la
