@@ -1,3 +1,9 @@
+globus-xio (4.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 14:33:51 -0500
+
 globus-xio (4.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix test case
